--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rosemary Ting</h1>
+    <h1 style = "color: white">ROSEMARY TING</h1>
     <p>Computer Science Major at University of California, Berkeley</p>
+
+    <div>
+        <h2>About Me</h2>
+        <img src=”me.jpg” alt=”MyImage” height=”600” width=”500”>
+
+    </div>
 </body>
 </html>
