--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,7 @@
             </p>
             <p class="banner_text">Relevant Coursework: Multivariable Calculus (Math 53), Linear Algebra and Differential Equations (Math 54), The Foundations of Data Science (Data 8), Structure and Interpretation of Computer Programs (CS61A), Data Structures (CS61B), Principles & Techniques of Data Science (Data 100) 
             </p>
-            <div class="contact_bt"><a href="contact.html"><u>CONNECT WITH ME</u><span class="contact_padding"></span></a></div>
+            <div class="contact_bt"><a href="#Connect"><u>CONNECT WITH ME</u><span class="contact_padding"></span></a></div>
           </div>
           <div class="col-sm-5">
             <div><img src="images/me.jpg" class="image_1"></div>
