--- a/html/index.html
+++ b/html/index.html
@@ -146,9 +146,10 @@
       <div class="container">
         <div class="footer_main">
           <div class="footer_left">
+            <h1 class="contact_taital", id = 'Connect'><span>Connect</span></h1>
           </div>
           <div class="footer_left">
-            <div class="location_text", id = 'Connect'><a href="files/resume.pdf" target="_blank"><img src="images/tiles-img.png"><span class="padding_left_15">Resume</span></a></div>
+            <div class="location_text"><a href="files/resume.pdf" target="_blank"><img src="images/linkden-icon1.png"><span class="padding_left_15">Resume</span></a></div>
           </div>
           <div class="footer_left">
             <div class="location_text"><a href="https://www.linkedin.com/in/rosemary-ting" target="_blank"><img src="images/linkden-icon1.png"><span class="padding_left_15">LinkedIn</span></a></div>
